# eVaiutilities

./: Cargo.toml  LICENSE  README.md  barplot.py  condaeVaiutilities.yaml  eVaitutilties.md  gaurav  paper.bib  sample  sample1-variantfilter.txt  sample1.tsv  samplename
.github/workflows/: draft-pdf.yml
data-repo/: gRanges.gtf  samplegtf.gtf
paper/: paper.md
population-analysis/: 14_RNAseq.ACMG.tsv.select.tsv  ID012.ACMG.tsv.select.tsv  ID015.ACMG.tsv.select.tsv  ID016.ACMG.tsv.select.tsv  ID019.ACMG.tsv.select.tsv  ID026.ACMG.tsv.select.tsv
src/: acmgtranscript.rs  altallele.rs  altalleleolder.rs  annotation.rs  annotationolder.rs  args.rs  coordinate.rs  coordinateolder.rs  coordinatevariant.rs  coordinatevariantolder.rs  fastanalyzer.rs  genomeanalyzer.rs  genomedownload.rs  gtfanalyzer.rs  main.rs  pathogenicity.rs  pathogenicityolder.rs  populationvariant.rs  populationvariantolder.rs  refallele.rs  refalleleolder.rs  sequenceprofile.rs  structfile.rs  transcript.rs  transcriptolder.rs  variantaccumulate.rs  variantaccumulation.rs  variantdatabase.rs  variantfilter.rs
testfiles/single-population/: sample1.tsv
